resolve public path

--- a/valentines/index.html
+++ b/valentines/index.html
@@ -4,8 +4,8 @@
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Valentine's Day</title>
-<link href="/css/3e14f637bd558ef93b06.css" rel="stylesheet"></head>
+<link href="/valentines/css/3e14f637bd558ef93b06.css" rel="stylesheet"></head>
 <body>
  <div id="root"></div>
-<script type="text/javascript" src="/bundle.a25b2780791214a1dea6.js"></script></body>
+<script type="text/javascript" src="/valentines/bundle.d4b7acdb94d4bdcfe5e8.js"></script></body>
 </html>
